--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,20 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
+pyrogram = "^2.0.106"
+sqlalchemy = "^2.0.36"
+alembic = "^1.13.3"
+asyncpg = "^0.30.0"
+tgcrypto = "^1.2.5"
+uvloop = "^0.21.0"
+pyrogram-patch = {git = "https://github.com/kotttee/pyrogram_patch.git"}
+redis = "^5.2.0"
+black = "^24.10.0"
+isort = "^5.13.2"
+mypy = "^1.13.0"
+flake8 = "^7.1.1"
+environs = "^11.0.0"
+alembic-postgresql-enum = "^1.3.0"
 
 
 [build-system]
